<resources>
    <string name="app_name">TipCalculator</string>
    <string name="bill">Bill</string>
    <string name="_10">10%</string>
    <string name="tip_percent">Tip Percent</string>
    <string name="total_115_tip_15">Total $115(tip $15)</string>
    <string name="calculate">Calculate</string>
    <string name="_2">2</string>
    <string name="no_of_people">NO. OF PEOPLE</string>
    <string name="price">Price</string>
</resources>
